# swift-icu-messageformat-parser-lib

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  create-package.sh  lib.swift
Development/.swiftpm/xcode/package.xcworkspace/xcuserdata/tmatsushita.xcuserdatad/: UserInterfaceState.xcuserstate
Development/.swiftpm/xcode/xcuserdata/tmatsushita.xcuserdatad/xcschemes/: xcschememanagement.plist
Development/RustXcframework.xcframework/ios-arm64/Headers/: swift-icu-messageformat-parser.h
Development/RustXcframework.xcframework/macos-arm64_x86_64/Headers/: module.modulemap
ICUMessageParser/: Package.swift
ICUMessageParser/RustXcframework.xcframework/: Info.plist
ICUMessageParser/RustXcframework.xcframework/ios-arm64/Headers/: swift-icu-messageformat-parser.h
ICUMessageParser/RustXcframework.xcframework/macos-arm64_x86_64/Headers/: swift-icu-messageformat-parser.h
ICUMessageParser/Sources/ICUMessageParser/: swift-icu-messageformat-parser.swift
RustXcframework.xcframework/: Info.plist
RustXcframework.xcframework/ios-arm64/Headers/: swift-icu-messageformat-parser.h
RustXcframework.xcframework/macos-arm64_x86_64/Headers/: swift-icu-messageformat-parser.h
Sources/ICUMessageFormatParser/: ASTElement.swift  Ast.swift  Interfaces.swift  swift-icu-messageformat-parser.swift
rust/: build-rust.sh  create-package.sh
rust/src/: lib.rs
src/: lib.rs
