[package]
name = "swift-icu-messageformat-parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1.52"

[dependencies]
icu-messageformat-parser = "0.0.2"
serde = "1.0.197"
serde_json = "1.0.114"
swift-bridge = "0.1.52"
